Socials, Header, Footer

--- a/src/quasar-variables.sass
+++ b/src/quasar-variables.sass
@@ -1,6 +1,18 @@
-$primary   : #1976D2
-$secondary : #26A69A
+// Default
+// $primary   : #1976D2
+// $secondary : #26A69A
+// $accent    : #9C27B0
+
+// Flaf
+$primary   : #41a4fb
+$secondary : #1488ed
 $accent    : #9C27B0
+
+$success   : #24ce8c
+$disabled  : #bebebe
+$focus     : #41a4fb
+$checked   : #41b1fe
+$fontDark  : #151515
 $border    : #407fbf
 
 $dark      : #1D1D1D
