TOS, Prices, DynamicHtml

--- a/src/quasar-variables.sass
+++ b/src/quasar-variables.sass
@@ -17,11 +17,13 @@ $border    : #407fbf
 
 $dark      : #1D1D1D
 $dark2     : #141e26
+$dark3     : #223544
 $dark0     : #000
 
 $positive  : #21BA45
 $negative  : #C10015
 $info      : #31CCEC
-$warning   : #F2C037
+//$warning   : #F2C037
+$warning   : #FB8C00
 
 $typography-font-family: "Montserrat"
