Buy - Contact Info

--- a/src/quasar-variables.sass
+++ b/src/quasar-variables.sass
@@ -21,7 +21,8 @@ $dark3     : #223544
 $dark0     : #000
 
 $positive  : #21BA45
-$negative  : #C10015
+// $negative  : #C10015
+$negative  : #ff5252
 $info      : #31CCEC
 //$warning   : #F2C037
 $warning   : #FB8C00
