Buys estimate card (SAFE POINT)

--- a/src/quasar-variables.sass
+++ b/src/quasar-variables.sass
@@ -18,7 +18,7 @@ $border    : #407fbf
 $dark      : #1D1D1D
 $dark2     : #141e26
 $dark3     : #223544
-$dark0     : #000
+$dark4     : #3e5464
 
 $positive  : #21BA45
 // $negative  : #C10015
